<resources>
    <string name="app_name">My Reminder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="menu_insert">Add Reminder</string>
    <string name="menu_delete">Delete Reminder</string>
    <string name="menu_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="alarm_text">Alarms</string>
    <string name="task_text">Reminder</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="my_location_text">My Location</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="about_us_text">About Us</string>
    <string name="snooze_header">Select Snooze Time</string>
    <string-array name="SnoozeTimes">
        <item>5 mins</item>
        <item>10 mins</item>
        <item>15 mins</item>
        <item>30 mins</item>
        <item>45 mins</item>
        <item>1 hr</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string-array name="pref_alarm_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string-array name="alarm_type_array">
        <item>Normal</item>
        <item>Calculate(easy)</item>
        <item>Calculate(hard)</item>
    </string-array>

    <!-- Example settings for Notifications -->

    <string name="pref_reminder_notifications">Reminder Notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="alarm_type">Alarm Type</string>
    <string name="alarm_type_key">alarm_type_key</string>
    <string name="title_activity_geocoding_maps">Map</string>
    <string name="action_satellite">Satellite View</string>
    <string name="action_normalview">Normal View</string>
    <string name="action_hybrid">Hybrid View</string>
    <string name="action_terrain">Terrain</string>

    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <string name="task_not_completed">task uncomplete </string>
    <string name="task_completed">Completed</string>
    <string name="location_reminder">Location Reminder</string>
    <string name="pref_title_ringtone_notification">Notification Ringtone</string>
    <string name="preference_user_key">PreferenceUserKey</string>

    <string-array name="radius">
        <item>50 m</item>
        <item>100 m</item>
        <item>150 m</item>
        <item>200 m</item>
        <item>250 m</item>
        <item>300 m</item>
    </string-array>
    <string-array name="colors">
        <item>chrome</item>
        <item>black</item>
        <item>blue</item>
        <item>green</item>
        <item>pink</item>
        <item>red</item>
        <item>violet</item>
    </string-array>

    <string name="task_saved_message">Task has been saved</string>
    <string name="no_reminders">No Reminders Yet</string>

    <string name="notify_new_task_message">A task needs to be reviewed!</string>
    <string name="notify_new_task_title">Task Reminder!</string>

    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Reminder Title</string>

    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>
    <string name="confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
