<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/alarm"
            android:icon="@drawable/ic_menu_alarm"
            android:title="@string/alarm_text" />
        <item
            android:id="@+id/task"
            android:icon="@drawable/ic_menu_reminder"
            android:title="@string/task_text" />
        <item
            android:id="@+id/loc_reminder_id"
            android:icon="@drawable/ic_location_black"
            android:title="@string/location_reminder" />
    </group>

    <item android:title="Further Information">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact_us_text" />
        </menu>
    </item>

</menu>
